--- a/src/main/resources/templates/admin/movie/list.html
+++ b/src/main/resources/templates/admin/movie/list.html
@@ -157,9 +157,9 @@
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" th:href="@{/api/admin/movie}">Movie</a>
+                            <a class="nav-link" th:href="@{/api/admin/theater}">Theater</a>
+                            <a class="nav-link" th:href="@{/api/admin/schedule}">Schedule</a>
                             <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
-                            <a class="nav-link" th:href="@{/api/theater}">Theater</a>
-                            <a class="nav-link" th:href="@{/api/movie/register}">영화정보 등록하기</a>
                         </nav>
                     </div>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -218,7 +218,7 @@
                     <li class="breadcrumb-item"><a th:href="@{/api/admin}">Dashboard</a></li>
                     <li class="breadcrumb-item active">Movie</li>
                 </ol>
-
+                <div th:insert="~{/admin/movie/chart :: chart-movie}"></div>
                 <div class="card mb-4">
                     <div class="card-body">
                         <p class="mb-0">
@@ -240,7 +240,7 @@
                     <div class="card-body">Scroll to manage all the data conveniently.</div>
                 </div>
 
-                <div th:insert="~{/admin/movie/ex :: chart-movie}"></div>
+
 
             </div>
         </main>
