--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -306,6 +306,7 @@
                         saveBtn.addEventListener('click', function () {
                             const data = table.getData();
                             alert(data);
+                            console.log(data)
 
                             const userData = data.map(row => {
                                 return {
