--- a/src/main/resources/templates/admin/theater/register.html
+++ b/src/main/resources/templates/admin/theater/register.html
@@ -127,7 +127,7 @@
                 console.log("극장 정보 저장 성공: ", res);
                 alert("극장 정보 저장 성공!");
                 console.log(res.data)
-                window.location.href = "/api/theater";
+                window.location.href = "/api/admin/theater";
             }
         }).catch(err => {
             console.log("극장 정보 저장 실패: ", err);
